Sneha/Connie: Legal 89 :Fixed the misaligned schedule page

--- a/src/sass/fullcalendar.scss
+++ b/src/sass/fullcalendar.scss
@@ -29,6 +29,7 @@ html .fc,
 .fc th {
 	padding: 0;
 	vertical-align: top;
+    width: 13.5%;
 	}
 
 
